--- a/5.hash.md
+++ b/5.hash.md
@@ -1,11 +1,25 @@
 ### 242 有效字母异位词
 
 - https://leetcode.cn/problems/valid-anagram/
-- 由于是单词, 所以只有26个字母, 直接用数组来统计就好了
+- 由于是单词, 所以只有26个字母, 直接用数组来统计就好了, 还可以 排序
 - 而且在开始可以判断长度是否相等
 - 先审题: 我是用map来写的
 
 ```c++
+// 排序比大小
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        if (s.length() != t.length()) {
+            return false;
+        }
+        sort(s.begin(), s.end());
+        sort(t.begin(), t.end());
+        return s == t;
+    }
+};
+
+// 数据组统计
 class Solution {
 public:
     bool isAnagram(string s, string t) {
