--- a/5.hash.md
+++ b/5.hash.md
@@ -93,3 +93,353 @@ int main(void)
     return 0;
 }
 ```
+
+### 349 两个数组的交集
+
+- https://leetcode.cn/problems/intersection-of-two-arrays/
+- 使用 unordered_set, 判断另一个数组是否也在这个集合中, 或者2个集合就交集
+- 对两个数组排序, 然后双指针移动比较
+- 由于测试范围固定, 可以用数组做哈希表直接统计
+
+```c++
+// 排序 数组
+class Solution {
+public:
+    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
+        sort(nums1.begin(), nums1.end());
+        sort(nums2.begin(), nums2.end());
+        int length1 = nums1.size(), length2 = nums2.size();
+        int index1 = 0, index2 = 0;
+        vector<int> intersection;
+        while (index1 < length1 && index2 < length2) {
+            int num1 = nums1[index1], num2 = nums2[index2];
+            if (num1 == num2) {
+                // 保证加入元素的唯一性
+                if (!intersection.size() || num1 != intersection.back()) {
+                    intersection.push_back(num1);
+                }
+                index1++;
+                index2++;
+            } else if (num1 < num2) {
+                index1++;
+            } else {
+                index2++;
+            }
+        }
+        return intersection;
+    }
+};
+
+// 数组 统计
+class Solution {
+public:
+    vector<int> intersection(vector<int>& nums1, vector<int>& nums2) {
+        unordered_set<int> result_set; // 存放结果，之所以用set是为了给结果集去重
+        int hash[1005] = {0}; // 默认数值为0
+        for (int num : nums1) { // nums1中出现的字母在hash数组中做记录
+            hash[num] = 1;
+        }
+        for (int num : nums2) { // nums2中出现话，result记录
+            if (hash[num] == 1) {
+                result_set.insert(num);
+            }
+        }
+        return vector<int>(result_set.begin(), result_set.end());
+    }
+};
+```
+
+```c++
+// unordered_set
+#include<iostream>
+#include<unordered_set>
+#include<vector>
+
+using std::cout;
+using std::endl;
+using std::unordered_set;
+using std::vector;
+
+class Solution
+{
+public:
+	vector<int> intersection(vector<int>& nums1, vector<int>& nums2)
+	{
+		unordered_set<int> nums1_set(nums1.begin(), nums1.end());
+		unordered_set<int> res_set;
+
+		for (auto item : nums2)
+		{
+			if (nums1_set.find(item) != nums1_set.end())
+			{
+				res_set.insert(item);
+			}
+		}
+
+		return vector<int>(res_set.begin(), res_set.end());
+	}
+};
+
+
+int main(void)
+{
+	vector<int> nums1 = {4, 9, 5}, nums2 = {9, 4, 9, 8, 4};
+	Solution s;
+
+	auto res = s.intersection(nums1, nums2);
+	for (auto iter = res.begin(); iter != res.end(); ++iter)
+	{
+		cout << *iter << " ";
+	}
+	cout << endl;
+
+	return 0;
+}
+```
+
+### 350 两个数组的交集 II
+
+- https://leetcode.cn/problems/intersection-of-two-arrays-ii/
+- 请你以数组形式返回两数组的交集。返回结果中每个元素出现的次数，应与元素在两个数组中都出现的次数一致（如果出现次数不一致，则考虑取较小值）
+- 排序 双指针 or map统计数据
+
+```c++
+// 数组
+class Solution {
+public:
+    vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
+        sort(nums1.begin(), nums1.end());
+        sort(nums2.begin(), nums2.end());
+        int length1 = nums1.size(), length2 = nums2.size();
+        vector<int> intersection;
+        int index1 = 0, index2 = 0;
+        while (index1 < length1 && index2 < length2) {
+            if (nums1[index1] < nums2[index2]) {
+                index1++;
+            } else if (nums1[index1] > nums2[index2]) {
+                index2++;
+            } else {
+                intersection.push_back(nums1[index1]);
+                index1++;
+                index2++;
+            }
+        }
+        return intersection;
+    }
+};
+
+// map
+class Solution {
+public:
+    vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
+        if (nums1.size() > nums2.size()) {
+            return intersect(nums2, nums1);
+        }
+        unordered_map <int, int> m;
+        for (int num : nums1) {
+            ++m[num];
+        }
+        vector<int> intersection;
+        for (int num : nums2) {
+            if (m.count(num)) {
+                intersection.push_back(num);
+                --m[num];
+                if (m[num] == 0) {
+                    m.erase(num);
+                }
+            }
+        }
+        return intersection;
+    }
+};
+```
+
+### 202 快乐数
+
+- https://leetcode.cn/problems/happy-number/
+
+- 快乐数 定义为：
+
+  对于一个正整数，每一次将该数替换为它每个位置上的数字的平方和。
+  然后重复这个过程直到这个数变为 1，也可能是 无限循环 但始终变不到 1。
+  如果这个过程 结果为 1，那么这个数就是快乐数。
+
+- 提到, 如果不是, 结果会无限循环, 所以用set来记录和判断
+
+- 还有, 不断求下一个数, 这是一个隐形链表, 可以快慢指针找环
+
+```c++
+#include<iostream>
+#include<unordered_set>
+
+using std::cout;
+using std::endl;
+using std::unordered_set;
+
+class Solution
+{
+public:
+	int getSum(int n)
+	{
+		int sum = 0;
+		int num;
+
+		while(n)
+		{
+			num = n % 10;
+			sum += num * num;
+
+			n /= 10;
+		}
+
+		return sum;
+	}
+
+	bool isHappy(int n)
+	{
+		int sum = n;
+		unordered_set<int> uset;
+
+		while(true)
+		{
+			sum = getSum(sum);
+
+			if (sum == 1)
+			{
+				return true;
+			}
+
+			if (uset.find(sum) != uset.end())
+			{
+				return false;
+			}
+			else
+			{
+				uset.insert(sum);
+			}
+		}
+
+		return true;
+	}
+	
+};
+
+int main(void)
+{
+	int t = 2;
+
+	Solution s;
+	cout << s.isHappy(t) << endl;
+
+	return 0;
+}
+```
+
+```c++
+// 快慢指针 Python
+slow_runner = n
+fast_runner = get_next(n)
+while fast_runner != 1 and slow_runner != fast_runner:
+	slow_runner = get_next(slow_runner)
+    fast_runner = get_next(get_next(fast_runner))
+return fast_runner == 1
+```
+
+### 1 俩数之和
+
+- 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
+  你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+  你可以按任意顺序返回答案。
+
+- map合适, 不要想着, 先加入, 再查找(因为有重复元素), 不一定是往后找, 也可以是往前找
+  
+- !! 数组中同一个元素在答案里不能重复出现 : 是说数组元素可以重复, 但不能重复使用
+
+```c++
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& nums, int target) {
+        unordered_map<int, int> umap;
+
+		for (int i = 0; i < nums.size(); ++i)
+		{
+			auto it = umap.find(target - nums[i]);
+
+			if (it != umap.end())
+			{
+				return vector<int>{it->second, i};
+			}
+
+			umap[nums[i]] = i;
+		}
+
+        return vector<int>{};
+    }
+};
+
+// 2
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& nums, int target) {
+        std::unordered_map <int,int> map;
+        for(int i = 0; i < nums.size(); i++) {
+            // 遍历当前元素，并在map中寻找是否有匹配的key
+            auto iter = map.find(target - nums[i]); 
+            if(iter != map.end()) {
+                return {iter->second, i};
+            }
+            // 如果没找到匹配对，就把访问过的元素和下标加入到map中
+            map.insert(pair<int, int>(nums[i], i)); 
+        }
+        return {};
+    }
+};
+```
+
+### 454 四数相加 II
+
+- https://leetcode.cn/problems/4sum-ii/
+- 统计4个数组分别有一个元素之和为0的元组的数目
+- 确实是两两统计, 转化成统计2个数之和
+
+```c++
+class Solutin
+{
+public:
+	int fourSumCount(vector<int>& nums1, vector<int>& nums2, vector<int>& nums3, vector<int>& nums4)
+	{
+		unordered_map<int, int> umap;
+
+		for (auto i : nums1)
+		{
+			for (auto j : nums2)
+			{
+				umap[i + j]++;
+			}
+		}
+
+		int count = 0;
+
+		for (auto i : nums3)
+		{
+			for (auto j : nums4)
+			{
+				auto it = umap.find(0 - (i+j));
+				if (it != umap.end())
+				{
+					count += it->second;
+				}
+			}
+		}
+
+		return count;
+	}
+	
+};
+```
+
+
+
+
+
+  
